Added Source Code created by DE's

--- a/lac-dev-repo/sql/adhoc/check_metastore.sql.ipynb
+++ b/lac-dev-repo/sql/adhoc/check_metastore.sql.ipynb
@@ -5,16 +5,40 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "0d19ee8d-11ff-40f8-8806-92df5741e154",
+     "nuid": "782f15f4-60d6-4ab1-84fb-8bd25c74df5d",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "USE CATALOG lac_testtenant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "db762827-706b-46d9-9538-8e1f726a1b23",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "USE CATALOG lac_testtenant"
+   ]
   }
  ],
  "metadata": {
@@ -26,15 +50,15 @@
     "environment_version": "4"
    },
    "inputWidgetPreferences": null,
-   "language": "python",
+   "language": "sql",
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "firstnb",
+   "notebookName": "check_metastore.sql",
    "widgets": {}
   },
   "language_info": {
-   "name": "python"
+   "name": "sql"
   }
  },
  "nbformat": 4,
